--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "-": "0.0.1",
     "@babel/polyfill": "^7.11.5",
+    "audio-loader": "^1.0.3",
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.11.2",
     "style-loader": "^1.2.1"
