--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.config.js",
-    "prod": "webpack --config config/webpack.config.prod.js",
-    "dev": "webpack --config config/webpack.config.js"
+    "prod": "webpack --config config/webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +26,7 @@
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
     "raw-loader": "^4.0.1",
     "sass-loader": "^10.0.2",
     "webpack": "^4.44.2",
